--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-asgiref==3.7.2
-Django==4.2.9
-gunicorn==23.0.0
+asgiref==3.8.1
+dj-database-url==2.3.0
+Django==5.1.5
+django-allauth==0.57.2
+oauthlib==3.2.2
+psycopg2-binary==2.9.10
+PyJWT==2.10.1
+python3-openid==3.2.0
+requests-oauthlib==2.0.0
 sqlparse==0.5.3
 whitenoise==6.8.2
-dj-database-url==2.1.0
-psycopg2-binary==2.9.9
