--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 dj-database-url==2.3.0
 Django==5.1.5
 django-allauth==0.57.2
+gunicorn==23.0.0
 oauthlib==3.2.2
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
