--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,117 @@
-core.Microsoft*
-core.mongo*
-core.python*
-env.py
+# Environment variables
+.env
+.env.local
+.env.*.local
+.env.development
+.env.production
+
+# Python
 __pycache__/
 *.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
+*.pot
+*.mo
+*.db
+*.sqlite3
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*.swn
+*.sout
+.project
+.pydevproject
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Project specific
 node_modules/
 .github/
 cloudinary_python.txt
+*.bak
+*.tmp
+*.temp
+*.swp
+*.swo
+*.swn
+*.sout
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.dll
+*.dylib
+*.dSYM
+*.egg-info/
+*.egg
+*.manifest
+*.spec
+*.log
+*.sqlite3
+*.db
+*.bak
+*.tmp
+*.temp
+*.swp
+*.swo
+*.swn
+*.sout
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.dll
+*.dylib
+*.dSYM
+*.egg-info/
+*.egg
+*.manifest
+*.spec
+*.log
+*.sqlite3
+*.db
